--- a/anywhere-excute-file/docker-compose.yml
+++ b/anywhere-excute-file/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       retries: 5
 
   web:
-    image: tangunsoftpartner/docker-compliance-survey:latest
+    image: tangunsoftpartner/docker-compliance-survey-window:<release-version>
     command: >
       bash -c "
       python manage.py wait_for_db &&
