--- a/anywhere-excute-file/docker-compose.yml
+++ b/anywhere-excute-file/docker-compose.yml
@@ -36,6 +36,7 @@ services:
 
   web:
     image: tangunsoftpartner/docker-compliance-survey-window:<release-version>
+    user: deamon
     command: >
       bash -c "
       python manage.py wait_for_db &&
