--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres
@@ -22,8 +20,8 @@ services:
     volumes:
       - minio_data:/data
     environment:
-      - MINIO_ROOT_USER=minioadmin  # 사용자 이름
-      - MINIO_ROOT_PASSWORD=minioadmin  # 비밀번호
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
     ports:
       - "9000:9000"
       - "9001:9001"
